loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:1: error: not found: value avancer
do avancer() while(!estSurBlanc) 
   ^